# arachne

./: .gitignore  Cargo.toml  Makefile  README.md  fork-visualization-context.json
.claude/agents/: consistency-reviewer.md  defensive-reviewer.md  security-reviewer.md  solid-reviewer.md
.claude/skills/review/: SKILL.md
docs/: architecture.md  configuration.md  omarchy-integration.md  status-report.json
install/applications/: arachne.desktop
install/hypr/: bindings.conf
install/mako/: arachne
install/waybar/: arachne.css  arachne.jsonc
src/: app.rs  config.rs  data_source.rs  error.rs  event.rs  kitty_protocol.rs  main.rs  project.rs  screen.rs  session.rs  terminal_graphics.rs  test_utils.rs
src/git/: mod.rs  repo.rs  types.rs
src/github/: client.rs  mod.rs  network.rs  remote_loader.rs  types.rs
src/graph/: branch_assign.rs  dag.rs  filter.rs  image_cache.rs  layout.rs  mod.rs  pixel_renderer.rs  types.rs
src/ui/: branch_panel.rs  config_screen.rs  detail_panel.rs  graph_view.rs  header_bar.rs  help_panel.rs  input.rs  mod.rs  status_bar.rs  theme.rs  toast.rs
src/watcher/: fs.rs  mod.rs  poll.rs
